tests/diagnostics/naming/casing/variable_not_camel_case/expect.txt
# exit: 1
input/main.coppice:2:5: error: variable name must be camelCase
      BadVar := 1
      ^
